# MichaelsVisualizer

./: Cargo.toml  README.md
.github/workflows/: rust.yml
data_format/: Cargo.toml
data_format/src/: lib.rs
michael_visualizer/: Cargo.toml  example_a copy.mv01  example_a.mv01  example_b.mv01  example_big.mv01  example_c.mv01  example_middle.mv01
michael_visualizer/src/: app.rs  confirm_exit.rs  data_types.rs  dialog.rs  localization.rs  main.rs
michael_visualizer/src copy/: violin_data.rs
michael_visualizer/src/app/: _dark_light.rs  _helper.rs  _tabs.rs  distribution.rs  dummy.rs  file.rs  file_loader.rs  files.rs  heatmap.rs  limits.rs  plot.rs  selection.rs  violinplot.rs
michael_visualizer/src/app/files/: file_data.rs
michael_visualizer/src/data_types/: finite_f32.rs
michael_visualizer_basic/: Cargo.toml
michael_visualizer_basic/src/: data_types.rs  event.rs  file.rs  key_generator.rs  lib.rs  simple_keys.rs  test.rs
michael_visualizer_basic/src/event/: file.rs  heatmap.rs  limit.rs  violin.rs
