[package]
name = "michael_visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
data_format = {path="../data_format"}
egui_extras = "0.22.0"
egui_dock = { version = "0.6.1", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
#michael_visualizer_basic = {path ="../michael_visualizer_basic"}
rfd = "0.11.4"
indexmap = { version = "1.9.3", features = ["serde"] }
egui_heatmap = {version="0.4.2",path="../../egui_heatmap"}